SERVER-55355: Retry tenant migration on oplog fetcher errors